got data ... done for today

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "id": "24a80127",
    "metadata": {},
    "outputs": [],
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "30513d66",
+   "execution_count": 85,
+   "id": "60d7453a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "eb6325da",
+   "execution_count": 86,
+   "id": "e470e467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "476a369d",
+   "execution_count": 87,
+   "id": "e9f62284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
     "    random_agent = RandomAgent(env=environment, max_iterations=2000)\n",
     "    RA_history = random_agent.act()\n",
     "    \n",
-    "    res = {\"method\": \"UCB_PC\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
-    "           \"reward\": sum(RA_history['rewards']), \"time\": RA_history['time']}\n",
+    "    res = {\"method\": \"RA\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
+    "           \"reward\": sum(RA_history['rewards']), \"time (ms)\": RA_history['time']}\n",
     "    \n",
     "    return res\n",
     "    \n",
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "2e46b3bc",
+   "execution_count": 88,
+   "id": "8b5bf423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,8 @@
     "def TS_run():\n",
     "    TS_history = TS_act(max_iterations=2000)\n",
     "    \n",
-    "    res = {\"method\": \"UCB_PC\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
-    "           \"reward\": sum(TS_history['rewards']), \"time\": TS_history['time']}\n",
+    "    res = {\"method\": \"TS\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
+    "           \"reward\": sum(TS_history['rewards']), \"time (ms)\": TS_history['time']}\n",
     "    \n",
     "    return res\n",
     "    \n",
@@ -87,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "12991d65",
+   "execution_count": 89,
+   "id": "539263db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +97,8 @@
     "    epsilon_greedy_agent = EpsilonGreedyAgent(env=environment, max_iterations=2000, epsilon=0.1)\n",
     "    EG_history = epsilon_greedy_agent.act()\n",
     "    \n",
-    "    res = {\"method\": \"UCB_PC\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
-    "           \"reward\": sum(EG_history['rewards']), \"time\": EG_history['time']}\n",
+    "    res = {\"method\": \"EG\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
+    "           \"reward\": sum(EG_history['rewards']), \"time (ms)\": EG_history['time']}\n",
     "    \n",
     "    return res\n",
     "    \n",
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "5002550d",
+   "execution_count": 90,
+   "id": "a985dd27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,8 +120,8 @@
     "    UCB_agent = UpperConfidenceBoundAgent(env=environment, max_iterations=2000)\n",
     "    UCB_history = UCB_agent.act()\n",
     "    \n",
-    "    res = {\"method\": \"UCB_PC\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
-    "           \"reward\": sum(UCB_history['rewards']), \"time\": UCB_history['time']}\n",
+    "    res = {\"method\": \"UCB\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
+    "           \"reward\": sum(UCB_history['rewards']), \"time (ms)\": UCB_history['time']}\n",
     "    \n",
     "    return res\n",
     "\n",
@@ -133,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "af6bce40",
+   "execution_count": 91,
+   "id": "e21c7cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "    UCB_PC_history = UCB_PC_agent.act()\n",
     "    \n",
     "    res = {\"method\": \"UCB_PC\", \"iterations\": NUM_ITERATIONS, \"arms (k)\": NUM_ARMS,\n",
-    "           \"reward\": sum(UCB_PC_history['rewards']), \"time\": UCB_PC_history['time']}\n",
+    "           \"reward\": sum(UCB_PC_history['rewards']), \"time (ms)\": UCB_PC_history['time']}\n",
     "    \n",
     "    return res\n",
     "\n",
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "c001a8ee",
+   "execution_count": 92,
+   "id": "907cd061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5bbbc27c",
+   "execution_count": 93,
+   "id": "2037be72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,12 +191,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "29a834ea",
+   "execution_count": 94,
+   "id": "c2613ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>iterations</th>\n",
+       "      <th>arms (k)</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>time (ms)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RA</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34169.281156</td>\n",
+       "      <td>52.032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TS</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>58042.690108</td>\n",
+       "      <td>55.969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EG</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>55174.014106</td>\n",
+       "      <td>31.966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UCB</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>58010.555448</td>\n",
+       "      <td>50.999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UCB_PC</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>57910.415321</td>\n",
+       "      <td>64.031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   method  iterations  arms (k)        reward  time (ms)\n",
+       "0      RA       100.0       1.0  34169.281156     52.032\n",
+       "1      TS       100.0       1.0  58042.690108     55.969\n",
+       "2      EG       100.0       1.0  55174.014106     31.966\n",
+       "3     UCB       100.0       1.0  58010.555448     50.999\n",
+       "4  UCB_PC       100.0       1.0  57910.415321     64.031"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "0bda8d6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results"
+    "results.to_csv('bandit_data.csv')"
    ]
   }
  ],
