cleanup for dataanalysis

--- a/BanditLearning.ipynb
+++ b/BanditLearning.ipynb
@@ -161,8 +161,7 @@
     "        axs[3].set_ylabel(\"Regrets\")\n",
     "        axs[3].legend(LEGEND, loc='upper left')\n",
     "\n",
-    "    fig.tight_layout()\n",
-    "    #plt.legend(['Thompson Sampling', 'Epsilon Greedy', 'UCB', 'UCB Pick/Compare'], loc='upper left')\n"
+    "    fig.tight_layout()"
    ]
   },
   {
