--- a/BanditLearning.ipynb
+++ b/BanditLearning.ipynb
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "PLOT_HISTORY = False\n",
+    "PLOT_HISTORY = True\n",
     "GATHER_DATA = True\n",
     "ALL_HISTORIES = []"
    ]
@@ -415,7 +415,7 @@
     "        self.env = env\n",
     "        self.iterations = max_iterations\n",
     "        self.epsilon = epsilon\n",
-    "\n",
+    "        \n",
     "    def act(self):\n",
     "        start_time = datetime.datetime.now()\n",
     "        \n",
@@ -428,6 +428,13 @@
     "        cumulative_rewards = []\n",
     "        cumulative_regrets = []\n",
     "\n",
+    "        for arm in range(self.env.k):\n",
+    "            reward = self.env.choose_arm(arm)\n",
+    "\n",
+    "            arm_rewards[arm] += reward\n",
+    "            arm_counts[arm] += 1\n",
+    "            q_values[arm] = arm_rewards[arm]/arm_counts[arm]\n",
+    "        \n",
     "        expected_value_sum = 0\n",
     "        for i in range(1, self.iterations + 1):\n",
     "            arm = np.random.randint(self.env.k) if np.random.random() < self.epsilon else np.argmax(q_values)\n",
